cabal-version:      2.4
name:               atlas-hask-client
version:            0.1.0.0

author:             andrii
maintainer:         quadr988@gmail.com

extra-source-files: CHANGELOG.md

executable atlas-hask-client
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , http-client
                    , http-conduit
                    , bytestring
                    , http-types ^>=0.12.3
                    , aeson
                    , yaml
    hs-source-dirs:   app
    default-language: Haskell2010
